<resources>
    <string name="app_name">Calculator112</string>

    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_cross">×</string>
    <string name="text_divide">÷</string>
    <string name="text_delete">del</string>
    <string name="text_dot">.</string>
    <string name="text_equal">=</string>

    <string name="text_invalid_expression">Invalid expression</string>
    <string name="text_fatal_error">Fatal Error</string>

    <string name="text_infinity">Infinity</string>

</resources>
